--- a/scss/lights.scss
+++ b/scss/lights.scss
@@ -14,21 +14,22 @@
   $light-off-opacity: 0.4;
   $speed: 0.7;
 
-  // Updated Christmas-themed colors
-  $christmas-red: rgba(255, 0, 0, 1);        // Classic Christmas red
-  $christmas-green: rgba(34, 139, 34, 1);    // Forest green
-  $warm-gold: rgba(255, 215, 0, 1);          // Warm yellow/gold
-  $snow-white: rgba(255, 250, 250, 1);       // Soft white
-  $candy-red: rgba(255, 30, 30, 1);          // Candy cane red
-
-  // First, let's add these color transitions to the existing variables section
+  // First, define our color list with more variations
   $christmas-colors: (
-    $christmas-red,
-    $christmas-green,
-    $warm-gold,
-    $snow-white,
-    $candy-red
+    rgba(255, 0, 0, 1),        // Bright red
+    rgba(34, 139, 34, 1),      // Forest green
+    rgba(255, 215, 0, 1),      // Gold
+    rgba(255, 250, 250, 1),    // Snow white
+    rgba(255, 30, 30, 1),      // Candy red
+    rgba(0, 100, 0, 1),        // Dark green
+    rgba(255, 180, 0, 1),      // Orange gold
+    rgba(220, 20, 60, 1),      // Crimson
+    rgba(50, 205, 50, 1),      // Lime green
+    rgba(255, 140, 0, 1)       // Dark orange
   );
+
+  // Random timing variables (using prime numbers for less pattern repetition)
+  $timings: (2.3s, 2.7s, 3.1s, 3.7s, 4.1s, 4.3s, 4.7s, 5.1s, 5.3s, 5.7s);
 
   .lightrope {
     text-align: center;
@@ -56,31 +57,16 @@
       display: inline-block;
       background: $christmas-red;
       box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $christmas-red;
-      animation-name: flash-1;
-      animation-duration: 4s;
-      &:nth-child(2n+1) {
-        background: $christmas-green;
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $christmas-green;
-        animation-name: flash-2;
-        animation-duration: 4.5s;
-      }
-      &:nth-child(3n+1) {
-        background: $warm-gold;
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $warm-gold;
-        animation-name: flash-3;
-        animation-duration: 5s;
-      }
-      &:nth-child(4n+2) {
-        background: $snow-white;
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $snow-white;
-        animation-name: flash-4;
-        animation-duration: 5.5s;
-      }
-      &:nth-child(5n+1) {
-        background: $candy-red;
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread $candy-red;
-        animation-name: flash-5;
-        animation-duration: 6s;
+      animation: none; // Reset any existing animations
+
+      // Use prime numbers for more randomness
+      @for $i from 1 through 10 {
+        &:nth-child(#{$i}n + #{random(5)}) {
+          background: nth($christmas-colors, random(10));
+          box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, random(10));
+          animation: flash-#{random(5)} nth($timings, random(10)) infinite;
+          animation-delay: random(5) * -1s;
+        }
       }
       &:before {
         content: "";
@@ -110,115 +96,27 @@
       }
     }
   }
-  @keyframes flash-1 {
-      0% { 
-        background: nth($christmas-colors, 1);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 1);
+
+  // Create 5 different random animation patterns
+  @for $i from 1 through 5 {
+    @keyframes flash-#{$i} {
+      0%, 100% { 
+        background: nth($christmas-colors, random(10));
+        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, random(10));
       }
       25% {
-        background: nth($christmas-colors, 2);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 2);
+        background: nth($christmas-colors, random(10));
+        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, random(10));
       }
       50% {
-        background: nth($christmas-colors, 3);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 3);
+        background: nth($christmas-colors, random(10));
+        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, random(10));
       }
       75% {
-        background: nth($christmas-colors, 4);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 4);
+        background: nth($christmas-colors, random(10));
+        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, random(10));
       }
-      100% {
-        background: nth($christmas-colors, 1);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 1);
-      }
-  }
-  @keyframes flash-2 {
-      0% { 
-        background: nth($christmas-colors, 2);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 2);
-      }
-      25% {
-        background: nth($christmas-colors, 3);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 3);
-      }
-      50% {
-        background: nth($christmas-colors, 4);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 4);
-      }
-      75% {
-        background: nth($christmas-colors, 5);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 5);
-      }
-      100% {
-        background: nth($christmas-colors, 2);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 2);
-      }
-  }
-  @keyframes flash-3 {
-      0% { 
-        background: nth($christmas-colors, 3);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 3);
-      }
-      25% {
-        background: nth($christmas-colors, 4);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 4);
-      }
-      50% {
-        background: nth($christmas-colors, 5);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 5);
-      }
-      75% {
-        background: nth($christmas-colors, 1);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 1);
-      }
-      100% {
-        background: nth($christmas-colors, 3);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 3);
-      }
-  }
-  @keyframes flash-4 {
-      0% { 
-        background: nth($christmas-colors, 4);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 4);
-      }
-      25% {
-        background: nth($christmas-colors, 5);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 5);
-      }
-      50% {
-        background: nth($christmas-colors, 1);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 1);
-      }
-      75% {
-        background: nth($christmas-colors, 2);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 2);
-      }
-      100% {
-        background: nth($christmas-colors, 4);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 4);
-      }
-  }
-  @keyframes flash-5 {
-      0% { 
-        background: nth($christmas-colors, 5);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 5);
-      }
-      25% {
-        background: nth($christmas-colors, 1);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 1);
-      }
-      50% {
-        background: nth($christmas-colors, 2);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 2);
-      }
-      75% {
-        background: nth($christmas-colors, 3);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 3);
-      }
-      100% {
-        background: nth($christmas-colors, 5);
-        box-shadow: 0px $globe-height/6 $globe-width*2 $globe-spread nth($christmas-colors, 5);
-      }
+    }
   }
 
   /* more space for lights */
